@@ -195,6 +195,21 @@ static void Breakpoint
 	return;
 	}
 
+
+#if (defined(XWIN) && HAVE_SIGNAL_H && HAVE_SYS_WAIT_H)
+
+// a SIGCHLD handler to properly clean up forked playmidi processes (if any)
+
+#include <sys/wait.h>
+#include <signal.h>
+void sigchld_handler(int sig)
+{
+	waitpid(-1, 0, WNOHANG);
+}
+
+#endif
+
+
 /*
  *	Main program.
  */
@@ -214,6 +229,11 @@ int main
 	strncpy(datapath, argv[0], counti);
 	chdir(datapath);
 #endif
+
+#if (defined(XWIN) && HAVE_SIGNAL_H && HAVE_SYS_WAIT_H)
+	signal(SIGCHLD, sigchld_handler);
+#endif
+
 
 
 	bool	needhelp=false;
