@@ -1,3 +1,7 @@
+2002-07-18  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
+	* exult.cc: SIGCHLD handler to clean up forked playmidi processes
+	* configure.in: check for sys/wait.h, signal.h (see above)
+
 2002-07-17  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
 	* Configuration.*, exult.cc: added -c option for alternate config files
 	  (quite useful if you have multiple data dirs or languages of BG/SI)
